force-app/main/default/objects/FS_Feed_Item_Junction__c/FS_Feed_Item_Junction__c.object-meta.xml
<CustomObject>
    <description>This junction object is used to store Chain Account Feed Item Id and Headquarter Feed Item Id .</description>
    <label>Feed Item Junction</label>
    <nameField>
        <label>Feed Item Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feed Items Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>