force-app/main/default/objects/FS_Feed_Item_Junction__c/fields/FS_Chain_Feed_Item__c.field-meta.xml
<CustomField>
    <fullName>FS_Chain_Feed_Item__c</fullName>
    <label>Chain Feed Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>