force-app/main/default/objects/FS_Feed_Item_Junction__c/fields/FS_CustomCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FS CustomCreatedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feed_Items_Junction</relationshipName>
    <type>Lookup</type>
</CustomField>