force-app/main/default/objects/FS_Feed_Item_Junction__c/fields/FS_Headquarter_Feed_Item__c.field-meta.xml
<CustomField>
    <fullName>FS_Headquarter_Feed_Item__c</fullName>
    <label>Headquarter Feed Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>