force-app/main/default/objects/FS_Feed_Item_Junction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>